--- a/client/my-app/src/App.css
+++ b/client/my-app/src/App.css
@@ -113,7 +113,7 @@ body{
   background-color: #9EB384;
   color:#F8F0E5;
   width: fit-content;
-  margin: auto;
+  margin: auto 5px 5px;
 }
 .undone_btn{
   padding: 5px;
@@ -131,6 +131,7 @@ body{
   background-color: #DAC0A3;
   color:white;
   width: fit-content;
+  margin: auto 5px 5px;
 }
 
 .delete_btn{
